<resources>
    <string name="app_name">TravelMate</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_notes">TravelMate</string>

    <!-- General Strings -->
    <string name="title">Title</string>
    <string name="username">Username</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dialog_title">Title</string>
    <string name="action_delete">Delete</string>
    <string name="action_yes">Yes</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_edit">Edit</string>
    <string name="action_save">Save</string>
    <string name="title_activity_search">Search Activity</string>
    <string name="title_activity_account">Account</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_backup">Backups</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="backup_options">Backup Options</string>
    <string name="restore">Restore from SD Card</string>
    <string name="backup">Backup to SD Card</string>

    <!--<string name="color">Color</string>
    <string name="share_using">Share Using</string>
    <string name="action_send">Share</string>
    <string name="action_change_color">Choose Color</string>
    <string name="choose_color">Choose Color</string>
         -->


    <!-- Sort Strings -->
    <string name="sort_title">Sort By</string>
    <string name="sort_by_category">Category</string>
    <string name="date_last_modified">Date Last Modified</string>
    <string name="action_sort">Sort</string>


    <!-- Entry Strings -->
    <string name="placeholder_entry_text">Enter entry</string>
    <string name="edit_title">Edit Title</string>
    <string name="edit_entry">Edit Entry</string>
    <string name="no_entries_found">No Entry found</string>
    <string name="title_activity_add_entry">Add Entry</string>
    <string name="title_activity_entry_detail">Entry Detail</string>
    <string name="name_is_required">Name is Required</string>
    <string name="title_is_required">Title is required</string>
    <string name="entry_is_required">Entry is required</string>
    <string name="email_prompt">Email</string>
    <string name="password_prompt">Password</string>


    <!-- Category Strings -->
    <string name="category">Category</string>
    <string name="title_activity_category">CategoryActivity</string>
    <string name="hint_enter_category">Enter Category</string>
    <string name="edit_category">Edit Category</string>
    <string name="add_category">Add Category</string>
    <string name="no_category_found">No Category Found</string>
    <string name="delete_Category">Delete Category</string>
    <string name="no_category">No Category found</string>

    <!-- Account Strings -->
    <string name="change_name">Change Name</string>
    <string name="change_password">Change Password</string>
    <string name="change_email">Change E-Mail</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>


</resources>
